# hitrace-bench

./: .gitignore  Cargo.toml  README.md  filters.json  run.json  runs.json  rust-toolchain.toml  test.html
.github/workflows/: rust.yml
src/: args.rs  bencher.rs  device.rs  filter.rs  main.rs  point_filters.rs  runconfig.rs  test.rs  trace.rs  utils.rs
testdata/: bench_v5_1_1.json  runs.json  runs_output.json  v1.ftrace  v1_output.json  v5.1.1.ftrace  v5_1_1.ftrace  v5_1_1_FCP.ftrace  v5_1_1_FCP_output.json  v5_1_1_LCP_output.json  v5_1_1_output.json
tests/: cli.rs
