[package]
name = "hitrace-bench"
version = "0.11.1"
edition = "2024"
repository = "https://github.com/openharmony-rs/hitrace-bench"
description = "Allows benching of servo on ohos using the hitrace library."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3.5.1"
env_logger = "0.11.8"
humanize-bytes = "1.0.6"
itertools = "0.14.0"
json5 = "0.4.1"
log = "0.4.29"
regex = "1.12.3"
rust_decimal = { version = "1.40.0", features = ["serde-with-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
time = { version = "0.3.47", features = ["macros", "parsing", "serde"] }
which = "8.0.0"
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty"] }
